# rust-azure-subnet-summary

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  ToDo.md  log4rs.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture-backlog.md
docs/adr/: 0001-gap-block-sizing-and-vnet-boundary-splitting.md  0002-mermaid-for-peering-diagram.md  0003-vnet-cidr-is-atomic-unit-for-overlap-detection.md  0004-subnet-vnet-cidr-single-ipv4.md
src/: cmd.rs  config.rs  de_duplicate_subnets.rs  graph_read_subnet_data.rs  ipv4.rs  lib.rs  main.rs  pipeline.rs  print_subnets.rs  struct_subnet.rs  struct_vnet.rs  subnet_add_row.rs  subnet_print.rs  subnet_struct.rs  write_banner.rs
src/azure/: azure_cache.rs  cache.rs  cli.rs  fetch.rs  graph.rs  local_gateway.rs  local_gateway_cache.rs  mod.rs  paginate.rs  peering_cache.rs  peering_graph.rs  vwan_cache.rs  vwan_graph.rs
src/models/: ipv4.rs  mod.rs  subnet.rs  vnet.rs
src/output/: csv.rs  dup_report.rs  mod.rs  peering_diagram.rs  peering_dot.rs  peering_topology.rs  terminal.rs  validate_dot.rs
src/processing/: dedup.rs  gap_finder.rs  mod.rs  overlap.rs  vnet.rs
src/tests/test_data/: az_vm_output_01.txt  az_vm_output_02.txt  peering_test_cache_01.json  subnet_test_cache_01.json  subnet_test_cache_02.json  subnet_test_cache_03.json  subnet_test_cache_04.json
tests/: integration_test.rs
