# workspace = { members = ["tmp_rust/tmprust"] }
[package]
name = "azure-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.19.0"
azure_identity = "0.19.0"
## azure_mgmt_compute = "0.19.0" # Automated azure parser.
## azure_mgmt_subscription = "0.19.0"
graph-rs-sdk = { version = "2.0.0", features = [] }
colored = "2.0.4"
dotenv = "0.15.0"
futures = "0.3.30"
itertools = "0.11.0"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = "1.2.0"
regex = "1.9.5"
reqwest = "0.12.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
term = "0.7.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_path_to_error = "0.1.16"
